engine/test_pgns/invalid/spider_moves.pgn
[GameType "Base+MLP"]
[Date "2023.09.13"]
[Event ""]
[Site ""]
[Round ""]
[White "noi"]
[Black "noi"]
[Result "InProgress"]

1. wL
2. bL wL\
3. wQ \wL
4. bQ bL-
5. wQ wL/
6. bG1 bQ-
7. wB1 wQ-
8. bS1 bG1/
9. wB2 -wQ
10. bS1 \wB1
